# claimsphere-ai

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py  models.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/data/: seed.py
backend/app/services/: claims_engine.py  graph_reasoner.py  repository.py
backend/backend/app/data/: claimsphere_demo.json
frontend/: index.html
frontend/assets/: styles.css
frontend/src/: api.js  app.js
frontend/src/lib/: format.js
frontend/src/state/: store.js
frontend/src/views/: architecture.js  claimList.js  composer.js  detail.js  overview.js
src/: main.py
