[project]
name = "claimsphere-ai-backend"
version = "0.1.0"
description = "Enterprise healthcare insurance claims processor demo"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
